# aviation-calc-util

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md  build-all-linux.sh  build-all-windows-static.bat  build-all-windows.bat  conanfile.py  conanfile.txt  create-nuget-package-dotnet.sh  create-nuget-package.bat
.github/workflows/: AviationCalcUtil.yml  AviationCalcUtil_Build_Only.yml  BuildCMakeReusable.yml  build-and-test.yml  tagged-release.yml
cmakescripts/: FileSystem.h.in  copy_bins.cmake  copy_dir_update.cmake  ecbuild_check_os.cmake
cmakescripts/eccodes/: conanfile.py  ecbuild_declare_project.patch
dockerfiles/windows/: Dockerfile  docker-compose.yml
eccodes/: conanfile.py
include/: AviationCalc.h  GeoPoint.h  GeoUtil.h  MathUtil.h
include/GeoTools/: AtmosUtil.h  GeoPoint.h  GeoTile.h  GeoUtil.h
include/GeoTools/GribTools/: GribDataPoint.h  GribTile.h
include/GeoTools/MagneticTools/: MagneticFieldElements.h  MagneticModel.h  MagneticModelCoefficients.h  MagneticResult.h  MagneticTile.h  MagneticUtil.h
include/InteropTools/: FileSystem.h  InteropUtil.h
include/MathTools/: LegendreUtil.h  MathUtil.h  Polynomial.h
profiles/: windows-debug-x64  windows-debug-x86  windows-release-x64  windows-release-x86
src/: CMakeLists.txt  GeoPoint.cpp  GeoUtil.cpp  MathUtil.cpp  lib.rs
src/GeoTools/: AtmosUtil.cpp  GeoPoint.cpp  GeoTile.cpp  GeoUtil.cpp
src/GeoTools/GribTools/: GribDataPoint.cpp  GribTile.cpp
src/GeoTools/MagneticTools/: MagneticFieldElements.cpp  MagneticModel.cpp  MagneticModelCoefficients.cpp  MagneticResult.cpp  MagneticTile.cpp  MagneticUtil.cpp
src/InteropTools/: InteropUtil.cpp
src/MathTools/: LegendreUtil.cpp  MathUtil.cpp  Polynomial.cpp
src/atmos/: grib.rs  mod.rs
src/atmos/grib/: grib_data_point.rs  grib_tile.rs  grib_tile_manager.rs  mod.rs
src/aviation/: mod.rs
src/cmake/: update_eccodes_definitions.cmake
src/geo/: altitude.rs.bak  bearing.rs  geo_point.rs  geo_tile.rs  latitude.rs  longitude.rs  mod.rs
src/geo_tools/: bearing.rs  geo_point.rs  geo_util.rs  latitude.rs  longitude.rs  mod.rs
src/macros/: mod.rs
src/magnetic/: magnetic_field.rs  magnetic_model.rs  magnetic_model_coefficients.rs  magnetic_tile.rs  mod.rs
src/math/: legendre.rs  mod.rs  polynomial.rs
src/math_tools/: math_util.rs
src/physics/: mod.rs
src/tests/: mod.rs
src/tests/atmos/: grib.rs  mod.rs
src/tests/aviation/: mod.rs
src/tests/geo/: mod.rs  test_geo_point.rs
src/tests/magnetic/: mod.rs
src/units/: acceleration.rs  angle.rs  angular_velocity.rs  length.rs  mod.rs  pressure.rs  temperature.rs  unit.rs  velocity.rs
swig/: CMakeLists.txt
swig/GeoTools/: GeoPoint.i  GeoUtil.i
swig/csharp/: CMakeLists.txt
swig/csharp/GeoTools/: AtmosUtil.i  GeoPoint.i  GeoTile.i  GeoUtil.i
swig/csharp/GeoTools/GribTools/: GribDataPoint.i  GribTile.i
swig/csharp/GeoTools/MagneticTools/: MagneticFieldElements.i  MagneticModel.i  MagneticModelCoefficients.i  MagneticResult.i  MagneticTile.i  MagneticUtil.i
swig/csharp/MathTools/: MathTools.i
swig/csharp/tools/: boost_gregorian_date.i  boost_ptime.i  csharp_static_class.i  std_string_ext.i  std_unique_ptr.i  std_vector_extend.i
test_package/: CMakeLists.txt  conanfile.py  test_atmos.cpp  test_geopoint.cpp  test_geoutil.cpp
tests/: CMakeLists.txt  test_geopoint.cpp
