[package]
name = "aviation_calc_util"
version = "2.0.0"
edition = "2021"
description = "A library to assist with aviation related calculations."
readme = "README.md"
repository = "https://github.com/997R8V10/aviation-calc-util"
license-file = "LICENSE"
keywords = ["aviation", "calculations"]
categories = ["aerospace::simulation", "mathematics", "science::geo"]

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
