[package]
name = "aviation_calc_util"
version = "2.11.7"
edition = "2021"
description = "A library to assist with aviation related calculations."
homepage = "https://github.com/997R8V10/aviation-calc-util"
authors = ["Prithvi Shivaraman"]
readme = "README.md"
repository = "https://github.com/997R8V10/aviation-calc-util"
license = "Apache-2.0 OR MIT"
keywords = ["aviation", "calculations"]
categories = ["aerospace::simulation", "mathematics", "science::geo"]

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
grib = "0.8.0"
ureq = "2.9.1"
